--- a/src/window.ui
+++ b/src/window.ui
@@ -21,15 +21,7 @@
     </item>
   </menu>
 
-  <object class="GtkListStore" id="store">
-    <columns>
-      <column type="gchararray"/> <!-- 0: Name -->
-      <column type="gchararray"/> <!-- 1: Type -->
-      <column type="gchararray"/> <!-- 2: Status -->
-      <column type="gfloat"/>     <!-- 3: Pct -->
-      <column type="gchararray"/> <!-- 4: Path -->
-    </columns>
-  </object>
+
 
   <object class="AdwApplicationWindow" id="window">
     <property name="title" translatable="yes">ZSO Converter</property>
@@ -86,48 +78,11 @@
                         <child>
                           <object class="AdwPreferencesGroup" id="list_group">
                             <child>
-                              <object class="GtkFrame">
+                              <object class="GtkListBox" id="file_list">
+                                <property name="selection-mode">none</property>
                                 <style>
-                                  <class name="card"/>
+                                  <class name="boxed-list"/>
                                 </style>
-                                <child>
-                                  <object class="GtkScrolledWindow">
-                                    <property name="min-content-height">350</property>
-                                    <child>
-                                      <object class="GtkTreeView" id="tree">
-                                        <property name="model">store</property>
-                                        <property name="headers-visible">False</property>
-                                        <property name="enable-search">False</property>
-                                        <style>
-                                          <class name="data-table"/>
-                                        </style>
-                                        <child>
-                                          <object class="GtkTreeViewColumn">
-                                            <property name="title" translatable="yes">File</property>
-                                            <property name="expand">True</property>
-                                            <child>
-                                              <object class="GtkCellRendererText"/>
-                                              <attributes>
-                                                <attribute name="text">0</attribute>
-                                              </attributes>
-                                            </child>
-                                          </object>
-                                        </child>
-                                        <child>
-                                          <object class="GtkTreeViewColumn">
-                                            <property name="title" translatable="yes">Status</property>
-                                            <child>
-                                              <object class="GtkCellRendererText"/>
-                                              <attributes>
-                                                <attribute name="text">2</attribute>
-                                              </attributes>
-                                            </child>
-                                          </object>
-                                        </child>
-                                      </object>
-                                    </child>
-                                  </object>
-                                </child>
                               </object>
                             </child>
                           </object>
